--- a/lowLevelAPI.ipynb
+++ b/lowLevelAPI.ipynb
@@ -445,9 +445,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python(spark-env)",
+   "display_name": "spark-env",
    "language": "python",
-   "name": "spark-env"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
