--- a/student-main.ipynb
+++ b/student-main.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -420,9 +420,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python(spark-env)",
+   "display_name": "spark-env",
    "language": "python",
-   "name": "spark-env"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
